# langchain_project

./: .bandit  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_INVENTORY.md  CLEANUP_INVENTORY_NON_PYTHON.md  CLEANUP_SUMMARY.md  COMPLETE_CLEANUP_SUMMARY.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_SETUP.md  INVENTORY.md  LANGCHAIN_FIX_SUMMARY.md  LANGCHAIN_INTEGRATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  LOGGING.md  PHASE2_FINAL_SUMMARY.md  PHOENIX_OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  SAD.md  SESSION_SUMMARY.md  TASKS.md  TESTING.md  TESTING_SETUP_SUMMARY.md  adaptive_tag_classifier.py  adaptive_tag_synthesizer.py  add_remaining_mappings.py  analyze_codebase.py  architecture_documentation.md  automated_retrieval_test.py  benchmark_current_modes.py  business_dashboard.html  business_dashboard_simple.py  business_glossar.py  (+250 more)
.claude/commands/: analyze.md  cleanup.md  cleanup:codebase.md  doc:analyze.md  doc:read.md  init.md  reflect:claude-md.md  reflect_claude-md.md  update.md  update:docs.md
SQL_QUERIES/: 01_eigentuemer.sql  02_mieter.sql  03_aktuelle_mieter.sql  07_wohnungen.sql  08_wohnungen_leerstand.sql  11_mieter_konten.sql  12_bank_konten.sql  14_eigentuemer_op.sql  18_versammlungen.sql  19_etv_presence.sql  20_monatliche_mieteinnahmen.sql  22_leerstandsanalyse.sql  24_ruecklagenanalyse.sql  25_objektbezogene_sachkonten.sql  26_detaillierte_buchungen.sql  30_weg_zahlungsuebersicht.sql  31_durchlaufende_posten.sql  32_sonderentnahmen.sql  33_ruecklagen_management.sql
analysis/: sql_query_content_analysis.md
archive/: BEFORE_AFTER_DEMO.md  CHANGELOG_20250406.md  CLAUDE.md  CONTEXT7_CLEANUP_SUMMARY.md  CURRENT_TEST_RESULTS_20250605.md  LANGCHAIN_INTEGRATION_SUMMARY.md  README.md  TESTING_IMPLEMENTATION_FINDINGS.md  TEST_RESULTS_SUMMARY.md  analyze_codebase.py  automated_retrieval_test.py  business_glossar.py  code-quality.md  code_quality_demo.py  complete_retrieval_test.py  data_sampler.py  db_executor.py  db_knowledge_compiler.py  deploy_production.sh  diagnostic_test.py  enhanced_qa_ui.py  enhanced_retrievers.py  enhanced_testing_framework.py  export_schema.py  fast_complete_test.py  fast_mode_test.py  fdb_direct_interface.py  final_comprehensive_test.py  firebird_sql_agent_direct.py  fk_graph_analyzer.py  focused_embeddings.py  full_mode_validation.py  generate_yaml_ui.py  global_context.py  hybrid_test_summary.py  iterative_improvement_test.py  langchain_sql_retriever_fixed.py  langgraph_sql_workflow.py  minimal_prompt_test.py  neo4j_importer.py  (+73 more)
config/: feature_flags.json  query_engine.json  sql_paths.json
database/: create_phase2_views.sql
docs/: api.rst  architecture.rst  benchmark_ui.md  changelog.rst  conf.py  development.rst  index.md  index.rst  overview.rst
exports/: 04_alle_mieter.json  05_objekte.json  06_objekte_portfolio.json  07_wohnungen.json  08_wohnungen_leerstand.json  09_konten.json  15_eigentuemer_op_zusammenfassung.json  16_beiraete.json  21_forderungsalterung.json  32_sonderentnahmen.json  34_spezielle_kontenklassen.json  _export_summary.json  _verification_summary.json
fb_temp_direct/: fb50_trace
fb_temp_global_init/: fb50_trace  fb_lock_0108000000000000e66a100000000000  fb_monitor_0108000000000000e66a100000000000  fb_snap_0108000000000000e66a100000000000  fb_tpc_0108000000000000e66a100000000000
golden_set/: baseline_summary.json
htmx/: benchmark.html  server.py
knowledge_base/: extraction_report.txt
models/: adaptive_tag_classifier.pkl  schema_patterns.json
otherproject/: README.md  claude.md
scripts/: create_views_step_by_step.py
test_results/: comprehensive_test_20250616_032235.csv  realistic_queries_1750087054.json  realistic_queries_1750087508.json  realistic_queries_1750087993.json  realistic_queries_1750088242.json  realistic_queries_1750088340.json  realistic_queries_1750088409.json  realistic_queries_1750088477.json  realistic_queries_1750089423.json  realistic_queries_1750102043.json  realistic_queries_1750102623.json  realistic_queries_1750102635.json  realistic_queries_1750103459.json  realistic_queries_1750104469.json  realistic_queries_1750106520.json
tests/: __init__.py  conftest.py  uibuttontest_920e9859-3390-4a3f-82a7-ca75d435e28b.spec.ts
tools/: create_focused_ddl_documentation.py  create_minimal_knowledge_base.py  extract_firebird_ddl.py  extract_firebird_schema.py  extract_firebird_schema_simple.py  extract_schema_from_queries.py  integrate_minimal_kb.py  realistic_golden_queries.py  test_fixed_schema.py  test_queries_real_data.py  update_knowledge_base_schema.py
(+1091 files in other folders)
